# rdk

./: .artifact.json  .artifact.test.json  .artifact.tree.json  .canon.yaml  .dockerignore  .gitignore  .golangci.yaml  .htmltest.yml  .sizewatcher.yml  CLAUDE.md  Dockerfile.fortest  FEATURE.md  LICENSE  Makefile  README.md  REVIEW_PLAN.md  android.make  bruh.json  buf.dep.yaml  buf.gen.yaml  buf.web.gen.yaml  buf.yaml  canon.make  code-samples-action.py  codecov.yml  config2.json]  doc.go  docker.make  encode_decode_test.go  fake-slam-config.json  fake.json  file  go.mod  go.sum  gripper.json  killme.json  local_fake.json  meta.json  mql.json  orangepi3.json  (+22 more)
.artifact/: config.json  tree.json
.claude/: settings.ci.json  settings.json
.codegpt/: head
.github/: CODEOWNERS  actionlint.yml  dependabot.yml
2d_obstacles/: 1d_ransac.py
action/: action.go  drive.go  util.go  util_test.go  verify_main_test.go
api/: arm.go  arm_test.go  attribute_map.go  base.go  base_compass.go  base_compass_test.go  base_test.go  component.go  component_test.go  config.go  config_diff.go  config_diff_test.go  config_reader.go  config_reader_test.go  config_test.go  config_watcher.go  config_watcher_test.go  detect_goleak_test.go  gripper.go  registry.go  registry_test.go  robot.go  status.go  status_test.go  verify_main_test.go
app/: app_client.go  app_client_test.go  app_proto_conversions.go  app_stream.go  app_types.go  authorization.go  billing_client.go  billing_client_test.go  common.go  data_client.go  data_client_test.go  data_test.go  datasync_client.go  fragment.go  location.go  log_stream.go  mltraining_client.go  mltraining_client_test.go  organization.go  organizations.go  provisioning_client.go  provisioning_client_test.go  registry.go  registry_item.go  registry_proto_conversions.go  resource_type.go  resource_types.go  robot.go  stream.go  test_utils.go  viam_client.go  viam_client_test.go
app2/: dataset_client.go  datasync_client.go
arm/: arm.go  arm_test.go  eva.go  kinematics.go  kinematics_test.go  statedisplay.go  test1.raw  ur.go  ur_parser.go  ur_parser_test.go  util.go  verify_main_test.go  wx250s.go
artifact/: cache.go  cache_test.go  config.go  config_load.go  config_load_test.go  config_test.go  detect_goleak_test.go  doc.go  file.go  file_test.go  fs_store.go  fs_store_test.go  google_storage_store.go  google_storage_store_test.go  log.go  status.go  store.go  store_config.go  store_config_test.go  store_test.go  testutils.go  tree.go  tree_test.go  verify_main_test.go
base/: base.go  base_test.go  compass.go  compass_test.go  device.go  utils.go  utils_test.go  verify_main_test.go
board/: analog_smoother.go  analog_smoother_test.go  board.go  board_test.go  brushless_motor.go  brushless_motor_test.go  config.go  config_test.go  detect_goleak_test.go  digital_interrupts.go  encoder.go  fake_board.go  fake_board_test.go  fake_motor.go  gpio.go  gpio_test.go  gpiomotor.go  gpiomotor_test.go  interrupts.go  interrupts_test.go  mcp3008.go  motor_encoder.go  motor_encoder_ramp_test.go  motor_encoder_test.go  pi.go  pi_pigpio.go  pi_pigpio_test.go  registry.go  serial.go  spi.go  status.go  stepper_motor.go  stepper_motor_gpio.go  stepper_motor_gpio_test.go  stepper_motor_test.go  stepper_motor_tmc.go  stepper_motor_tmc_test.go  verify_main_test.go
calibrate/: corners.go  corners_test.go  imgcontrol.go  imgcontrol_test.go  zhangs.go
camera/: camera.go
cli/: CLAUDE.md  CONTRIBUTING.md  README.md  STYLEGUIDE.md  app.go  archive.go  archive_test.go  auth.go  auth_application.go  auth_application_test.go  auth_test.go  boards.go  boards_test.go  client.go  client_test.go  config.go  customindex.go  customindex_test.go  data.go  data_test.go  datapipelines.go  datapipelines_test.go  dataset.go  dataset_sequence_export.go  dataset_sequence_export_test.go  defaults.go  defaults_test.go  delete.go  firebase_config.go  flags.go  flags_test.go  ftdc.go  genericlinux.go  local_viam_apps_setup.go  local_viam_apps_test.html  metadata_read.go  ml_inference.go  ml_training.go  ml_training_test.go  mltraining.go  (+35 more)
cli/module_generate/cpp-gen/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile.debian.bookworm  Dockerfile.gen-build  README.md  compilation_db.cpp  compilation_db.hpp  compiler_info.cpp  compiler_info.hpp  gen_api.cpp  gen_api.h  generator.cpp  generator.hpp  main.cpp  template_constants.hpp
cli/module_generate/cpp-gen/go_call/: go.mod  go_call.go  temp.cpp
cli/module_generate/cpp-gen/src/viam/generator/: compilation_db.cpp  compilation_db.hpp  compiler_info.cpp  compiler_info.hpp  generator.cpp  generator.hpp  main.cpp  template_constants.hpp
cli/modulegen/: .gitignore  build.sh  install.sh  pyproject.toml  requirements.txt
cli/modulegen/module_generator/: __main__.py
cli/modulegen/module_generator/module/: cookiecutter.json
cli/modulegen/module_generator/module/templates/: meta-template.json
cli/modulegen/module_generator/module/{{cookiecutter.module_id}}/: meta.json
cloud/: cloud.go
collision/: collision.go  collision_test.go  geometry.go
config/: attribute_map.go  attribute_map_test.go  caching_test.go  component.go  component_test.go  config.go  config_test.go  diff.go  diff_test.go  frame.go  frame_system.go  frame_system_test.go  frame_test.go  framesystem.go  global_log_config.go  log_config.go  log_config_test.go  logging_level.go  logging_level_test.go  module.go  module_test.go  placeholder_replacement.go  placeholder_replacement_test.go  platform.go  platform_test.go  proto_conversions.go  proto_conversions_test.go  reader.go  reader_ext_test.go  reader_test.go  resource.go  resource_test.go  service.go  service_test.go  verify_main_test.go  walker_visitor.go  watcher.go  watcher_test.go
control/: constant.go  constant_test.go  control.go  control_block.go  control_loop.go  control_loop_test.go  control_signal.go  control_test.go  derivative.go  derivative_test.go  encoder_speed.go  endpoint.go  filters.go  fir_filters.go  fir_filters_test.go  gain.go  gain_test.go  iir_filters.go  iir_filters_test.go  kalman_filter.go  (+7 more)
(+7595 files in other folders)
