[tool.poetry]
name = "module-generator"
version = "0.1.0"
description = ""
authors = ["Naveed Jooma <naveed@viam.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
